Format java coding style